src/test/resources/dev/kobu/integration/interpreter/out/ModulesErr.out
ERROR: 'myFunction' is already defined

File: /dev/kobu/integration/interpreter/src/modules/SubModule1.kobu
5:4
  fun myFunction(): void {
      ^^^^^^^^^^
File: /dev/kobu/integration/interpreter/src/modules/SubModule2.kobu
5:4
  fun myFunction(): void {
      ^^^^^^^^^^

ERROR: /dev/kobu/integration/interpreter/src/ModulesErr.kobu
 11:4 'myPrivateFunction' is not defined
  myPrivateFunction()
  ^^^^^^^^^^^^^^^^^^^

